--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,10 @@
     <string name="signout_label">Sign Out</string>
     <string name="profile_dummytext">go home filler</string>
     <string name="postTweet_label">Greet Your Followers</string>
+    <string name="refresh_label">Refresh</string>
+    <string name="intro_string">Tell Ameto to go home!</string>
+    <string name="intro2_string">or tweet things instead.</string>
+    <string name="home_description">This is your timeline. Why not greet your followers?</string>
+    <string name="oauth_disclaimer">This app uses Twitter\'s Oauth authentication method.</string>
 
 </resources>
